--- a/src/stories/form.css
+++ b/src/stories/form.css
@@ -15,7 +15,7 @@ button {
     margin: 8px 0;
     border: none;
     border-radius: 4px;
-    background-color: orange;
+    background-color: green;
     color: white;
     cursor: pointer;
 }
